fixed phone spacing

--- a/app/components/PageHead.module.css
+++ b/app/components/PageHead.module.css
@@ -50,12 +50,7 @@
     height: auto;
     object-fit: cover;
   }
-  .PageHead,
-  .PageHeadRow {
-    background: none;
-    height: auto;
-    min-height: auto;
-  }
+
   .PageHeadCol {
     width: 100%;
   }
