--- a/app/components/home1/AboutHome.module.css
+++ b/app/components/home1/AboutHome.module.css
@@ -104,7 +104,4 @@
     grid-template-columns: repeat(1, 1fr);
     row-gap: 30px;
   }
-  .ahRow1 {
-    padding-bottom: 0;
-  }
 }
