--- a/app/globals.css
+++ b/app/globals.css
@@ -203,7 +203,9 @@ button {
 ul {
   padding-left: clamp(20px, 2vw, 2vw);
 }
-
+.mb-own {
+  padding-bottom: clamp(60px, 11vh, 11vh);
+}
 /* Media query for screens smaller than 768px (typical mobile devices) */
 @media screen and (max-width: 768px) {
   .container {
